# spark-bi

./: .gitignore  .ruff.toml  README.md  makefile  pyproject.toml  pyrightconfig.json
.github/workflows/: tests.yml
example-reports/: Antal borgere per careteam.ipynb  Antal borgere per kommune.ipynb  Antal careteams per kommune.ipynb  Careplan.ipynb  Careteams by managing organisations municipality.ipynb  Careteams by municipality.ipynb  Careteams.ipynb  Citizens by anvenderløsning.ipynb  Citizens by careteam.ipynb  Citizens by diagnosis.ipynb  Citizens by municipality.ipynb  Citizens by organisatorisk enhed.ipynb  Citizens by region.ipynb  Citizens.ipynb  EpisodesOfCare.ipynb  Number of patients per careteam.ipynb  Observations.ipynb  Questionnaire.ipynb  QuestionnaireResponse.ipynb  README.md  Test-load-id-string.ipynb  Video appointments.ipynb  credentials_example.py  data_location.py
src/fut_bi/: __init__.py  spark.py  test_spark.py
src/spark_bi/: __init__.py  constants.py  dfs.py  spark.py  test_spark.py
